Fix error messages hidden by separators

--- a/bin/cdb.css
+++ b/bin/cdb.css
@@ -105,6 +105,7 @@
 .cdb .cdb-sheet td.edit > div.error {
   margin-top: 5px;
   position: absolute;
+  z-index: 2;
   color: red;
   background-color: #633;
   border: 1px solid #833;
